# speckitplus-calculator

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  combined-chatbot-architecture.drawio  package-lock.json  pyproject.toml
.claude/: AGENTS.md  CLAUDE.md  settings.json
.claude/agents/: flashcard-agent.md  quiz-agent.md  study-coach.md  tutor-agent.md
.claude/skills/: assignment1.md
.claude/skills-nocontext/building-chat-widgets/: SKILL.md
.claude/skills-nocontext/building-mcp-servers/: SKILL.md
.claude/skills-nocontext/building-rag-systems/: SKILL.md
.claude/skills-nocontext/configuring-better-auth/: SKILL.md
.claude/skills-nocontext/operating-k8s-local/: SKILL.md
.claude/skills/building-chatgpt-apps/: SKILL.md
.claude/skills/configuring-dapr-pubsub/: SKILL.md
.claude/skills/containerizing-applications/: SKILL.md
.claude/skills/deploying-cloud-k8s/: SKILL.md
.claude/skills/deploying-kafka-k8s/: SKILL.md
.claude/skills/draw-io/: SKILL.md  (+3 more)
.specify/memory/: constitution.md
flashcard/: lesson2-uv-flashcards.md  linear-regression-flashcards.md
lessons/: lesson1.md  lesson2-uv.md
notes/: 01-ai-fluency-4d-framework.md  lesson2-uv.md  linear-regression.md  markdown-boilerplate.md
quiz/: lesson2-uv-quiz.md  linear-regression-quiz.md
recipes/: oat-breakfast-bowl.md
specs/001-cli-calculator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/calculator/: __init__.py  cli.py  core.py  exceptions.py  parser.py
tests/integration/: __init__.py  test_cli.py
tests/unit/: __init__.py  test_core.py  test_parser.py
(+88 files in other folders)
